// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH fovTVG"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH lQRIR"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD cMzTSj"
      disabled={true}
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH ksAJKH"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH bfLhlA"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH eDSePL"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH dIlpaR"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo kuirYO"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH fovTVG"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH lQRIR"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH ksAJKH"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH fovTVG"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH lQRIR"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH ksAJKH"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH fovTVG"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH lQRIR"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH ksAJKH"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        medium
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH fovTVG"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU efanJu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
        dir="rtl"
      >
        large
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH lQRIR"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU efanJu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH ksAJKH"
          dir="rtl"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-hMtawp hRxnpO"
        >
          xlarge
        </label>
        <div
          className="sc-eEXVIU efanJu"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH fovTVG"
          placeholder="medium"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH lQRIR"
          placeholder="large"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH kgulLK"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="sc-hMtawp hAnfYh"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        medium
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH kcXFcx"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <label
        className="sc-hoIcGJ iDOroH"
      >
        large
      </label>
      <div
        className="sc-jveewi iGIuMt"
      >
        <input
          className="sc-bndzKH bBDYKG"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi kuLuHP"
      >
        <input
          className="sc-bndzKH ksAJKH"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="sc-hMtawp hAnfYh"
        >
          xlarge
        </label>
        <div
          className="sc-eEXVIU eGMFxF"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="sc-ehmXTo cLCsTu"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
